fix overflow on select token menu

--- a/src/components/Global/TokenList/TokenList.module.css
+++ b/src/components/Global/TokenList/TokenList.module.css
@@ -7,17 +7,17 @@
 
 }
 .token_list_content{
-    background: 
+    /* background: 
     linear-gradient(#0d1117 33%, rgba(13,17,23, 0)),
     linear-gradient(rgba(13,17,23, 0), #0d1117 66%) 0 100%,
-    radial-gradient(farthest-side at 50% 0, rgba(84,133,187, 0.5), rgba(0,0,0,0)),
-    radial-gradient(farthest-side at 50% 100%, rgba(84,133,187, 0.5), rgba(0,0,0,0)) 0 100%;
+    radial-gradient(farthest-side at 50% 0, rgba(13, 2, 134, 0.5), rgba(0,0,0,0)),
+    radial-gradient(farthest-side at 50% 100%, rgba(2, 2, 173, 0.5), rgba(0,0,0,0)) 0 100%; */
   background-color: #0d1117;
   background-repeat: no-repeat;
   background-attachment: local, local, scroll, scroll;
   background-size: 100% 81px, 100% 81px, 100% 27px, 100% 27px;
     /* height: 400px; */
-    max-height: 250px;
+    max-height: 200px;
     overflow-y: scroll;
     overflow-x: hidden;
     transition: all var(--animation-speed) cubic-bezier(0.175, 0.885, 0.32, 1.275);
