--- a/src/components/Global/TokenSelectContainer/TokenSelectContainer.module.css
+++ b/src/components/Global/TokenSelectContainer/TokenSelectContainer.module.css
@@ -7,13 +7,20 @@
 
 }
 .tokens_container{
-  /* background: yellow; */
+  background: yellow;
   max-height: 303px;
   /* min-height: 50px; */
     overflow-y: scroll;
   overflow-x: hidden;
   transition: all var(--animation-speed) cubic-bezier(0.175, 0.885, 0.32, 1.275);
   position: relative;
+}
+.token_select_searchable_container{
+  background: blue;
+ max-height: 200px;
+ overflow-y: scroll;
+ overflow-x: hidden;
+ transition: all var(--animation-speed) cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .manage_token_list_container{
@@ -27,25 +34,10 @@
   background: yellow;
 } */
 
-.tokens_container::-webkit-scrollbar {
+.tokens_container::-webkit-scrollbar, .token_select_searchable_container::-webkit-scrollbar {
   display: none;
 }
 
-/* .tokens_container:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  left: 0;
-  pointer-events: none;
-  width: 100%;
-  height: 3.7em;
-  background:linear-gradient(
-  to bottom,
-  rgba(0,0,0,0),
-  rgba(13, 17, 23, 0.90) 50%
-);
-} */
 
 /* search input */
 
